faq crud + swagger
