# src/admin/faq/dto/faq-category-request.dto.ts
@@ -1,0 +1,17 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+import { IsUrlOrLocal } from '@validators';
+
+export class FaqCategoryRequestDto {
+    @IsUrlOrLocal()
+    @IsNotEmpty()
+    picture: string;
+
+    @IsString()
+    @IsNotEmpty()
+    nameRu: string;
+
+    @IsString()
+    @IsNotEmpty()
+    nameHe: string;
+}
